<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ping\'s PokéDex</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Home Screen Strings -->
    <string name="home_string_pokemon">Pokémon</string>
    <string name="home_string_moves">Moves</string>
    <string name="home_string_abilities">Abilities</string>
    <string name="home_string_items">Items</string>
    <string name="home_string_berries">Berries</string>
    <string name="home_string_catch_calculator">Catch Calculator</string>
    <string name="home_string_type_effectiveness">Type Effectiveness</string>
    <string name="home_string_nature_effectiveness">Nature Effectiveness</string>
    <string name="home_string_pokedex_3d">PokéDex 3D</string>
</resources>
