<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">
            <!-- Pokemon -->
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:clickable="true"
                android:onClick="toPokemon">

                <ImageView
                    style="@style/HomeImageView"
                    android:id="@+id/image"
                    android:src="@drawable/small_025"
                    android:background="@color/light_blue" />

                <TextView
                    style="@style/HomeLabel"
                    android:text="@string/home_string_pokemon" />

            </RelativeLayout>
            <!-- horizantal rule -->
            <LinearLayout style="@style/HorizantalRule" />

            <!-- Moves -->
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:clickable="true"
                android:onClick="toMoves">

                <ImageView
                    style="@style/HomeImageView"
                    android:id="@+id/image"
                    android:src="@drawable/small_026"
                    android:background="@color/light_orange" />

                <TextView
                    style="@style/HomeLabel"
                    android:text="@string/home_string_moves" />

            </RelativeLayout>
            <!-- horizantal rule -->
            <LinearLayout style="@style/HorizantalRule" />

            <!-- Abilities -->
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:clickable="true"
                android:onClick="toAbilities">

                <ImageView
                    style="@style/HomeImageView"
                    android:id="@+id/image"
                    android:src="@drawable/small_027"
                    android:background="@color/light_green" />

                <TextView
                    style="@style/HomeLabel"
                    android:text="@string/home_string_abilities" />

            </RelativeLayout>
            <!-- horizantal rule -->
            <LinearLayout style="@style/HorizantalRule" />

            <!-- Items -->
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:clickable="true"
                android:onClick="toItems">

                <ImageView
                    style="@style/HomeImageView"
                    android:id="@+id/image"
                    android:src="@drawable/small_028"
                    android:background="@color/light_red" />

                <TextView
                    style="@style/HomeLabel"
                    android:text="@string/home_string_items" />

            </RelativeLayout>
            <!-- horizantal rule -->
            <LinearLayout style="@style/HorizantalRule" />

            <!-- Berries -->
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:clickable="true"
                android:onClick="toBerries">

                <ImageView
                    style="@style/HomeImageView"
                    android:id="@+id/image"
                    android:src="@drawable/small_029"
                    android:background="@color/light_blue" />

                <TextView
                    style="@style/HomeLabel"
                    android:text="@string/home_string_berries" />

            </RelativeLayout>
            <!-- horizantal rule -->
            <LinearLayout style="@style/HorizantalRule" />

            <!-- Catch Calculator -->
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:clickable="true"
                android:onClick="toCatchCalculator">

                <ImageView
                    style="@style/HomeImageView"
                    android:id="@+id/image"
                    android:src="@drawable/small_030"
                    android:background="@color/light_orange" />

                <TextView
                    style="@style/HomeLabel"
                    android:text="@string/home_string_catch_calculator" />

            </RelativeLayout>
            <!-- horizantal rule -->
            <LinearLayout style="@style/HorizantalRule" />

            <!-- Type Effectiveness -->
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:clickable="true"
                android:onClick="toTypeEffectiveness">

                <ImageView
                    style="@style/HomeImageView"
                    android:id="@+id/image"
                    android:src="@drawable/small_031"
                    android:background="@color/light_green" />

                <TextView
                    style="@style/HomeLabel"
                    android:text="@string/home_string_type_effectiveness" />

            </RelativeLayout>
            <!-- horizantal rule -->
            <LinearLayout style="@style/HorizantalRule" />

            <!-- Nature Effectiveness -->
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:clickable="true"
                android:onClick="toNatureEffectiveness">

                <ImageView
                    style="@style/HomeImageView"
                    android:id="@+id/image"
                    android:src="@drawable/small_032"
                    android:background="@color/light_red" />

                <TextView
                    style="@style/HomeLabel"
                    android:text="@string/home_string_nature_effectiveness" />

            </RelativeLayout>
            <!-- horizantal rule -->
            <LinearLayout style="@style/HorizantalRule" />

            <!-- Pokedex 3D -->
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:clickable="true"
                android:onClick="toPokeDex3D">

                <ImageView
                    style="@style/HomeImageView"
                    android:id="@+id/image"
                    android:src="@drawable/small_033"
                    android:background="@color/light_blue" />

                <TextView
                    style="@style/HomeLabel"
                    android:text="@string/home_string_pokedex_3d" />

            </RelativeLayout>
            <!-- horizantal rule -->
            <LinearLayout style="@style/HorizantalRule" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
